--- a/templates/events/index.html
+++ b/templates/events/index.html
@@ -1,7 +1,5 @@
 {% extends 'events/base.html' %}
 
 {% block content %}
-        <div>
-            <h2>Hi</h2>
-        </div>
+    <button><a href="search">Search for Shows</a></button>
 {% endblock %}
